--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/?useSSL=false
     username: root
     password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: com.mysql.jdbc.Driver
   mail:
     host: smtp.qq.com
     username: 269929756@qq.com
