--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,13 @@
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.10</version>
+            <version>8.0.30</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
