--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
   servlet:
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/?useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/5619dp?useSSL=false
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
