--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
   servlet:
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/5619dp?useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/5619db?useSSL=false
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -21,6 +21,8 @@ spring:
         new_generator_mappings: false
         format_sql: true
     show-sql: true
+    generate-ddl: true
+
   mvc:
     view:
       prefix: /templates/
