migrate to react

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,12 +17,11 @@ spring:
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
         new_generator_mappings: false
         format_sql: true
     show-sql: true
     generate-ddl: true
-
   mvc:
     view:
       prefix: /templates/
