--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "prompts": "^2.4.2",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
+    "bootstrap": "^5.2.2",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-dev-utils": "^12.0.1",
