--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/5619db?useSSL=false
     username: root
-    password: Ryan350202
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
   mail:
     host: smtp.qq.com
